--- a/.github/workflows/main_slottestapplication.yml
+++ b/.github/workflows/main_slottestapplication.yml
@@ -26,7 +26,7 @@ jobs:
       - name: npm install, build, and test
         run: |
           npm install
-          npm run build --if-present
+          next build --if-present
           npm run test --if-present
 
       - name: Zip artifact for deployment
